--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.1",
+    "dedent": "^0.7.0",
     "execa": "^0.10.0",
     "listr": "^0.14.0",
+    "npm-registry-client": "^8.5.1",
     "runjs": "^4.3.2",
     "rxjs": "^5.5.10",
     "split": "^1.0.1",
