--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "stream-to-observable": "^0.2.0"
   },
   "devDependencies": {
+    "semantic-release": "^15.4.1",
     "standard": "^11.0.1"
   }
 }
