--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm-registry-client": "^8.5.1",
     "runjs": "^4.3.2",
     "rxjs": "^5.5.10",
+    "rxjs-compat": "^6.2.0",
     "split": "^1.0.1",
     "stream-to-observable": "^0.2.0"
   },
